# chat-recipe-backend

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/: api.py
app/api/routes/: chat.py  recipes.py
app/core/: config.py  dependency_injection.py
app/domain/entities/: ingredient.py  message.py  recipe.py  step.py
app/domain/interfaces/: chat_repository.py  recipe_repository.py
app/infrastructure/repositories/: dummy_recipe_repository.py  dynamo_recipe_repository.py  openai_chat_repository.py
